# Innograph

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PROJECT_PROPOSAL.md  PROJECT_PROPOSAL_CN_ONEPAGE.md  README.md  docker-compose.yml  index.html  innograph_slides.html  project_tree.txt
.claude/: settings.local.json
assets/: index-CPj_fgEa.css  index-Cu4E5iOw.js
backend/: pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: graph_summarizer.py  paper_reader.py  relation_extractor.py  retrieval.py  seed_planner.py  state.py  verifier.py  workflow.py
backend/app/models/: edge.py  graph.py  paper.py  task.py
backend/app/prompts/: graph_summarizer.txt  paper_reader.txt  relation_extractor.txt  verifier.txt
backend/app/routers/: edges.py  graph.py  health.py  papers.py
backend/app/services/: __init__.py  base_datasource.py  cache.py  crossref.py  llm_provider.py  neo4j_service.py  openalex.py  semantic_scholar.py
backend/app/workers/: graph_builder.py
backend/tests/: conftest.py
backend/tests/fixtures/: openalex_search.json  s2_citations.json
backend/tests/test_agents/: test_paper_reader.py  test_retrieval.py  test_seed_planner.py  test_workflow.py
backend/tests/test_routers/: test_health.py  test_models.py
backend/tests/test_services/: test_openalex.py  test_semantic_scholar.py
docs/: architecture.md  demo.md  product.md  roadmap.md
frontend/: index.html  package-lock.json  package.json  test.html  tsconfig.tsbuildinfo  vite.config.ts
scripts/: demo.py  seed_neo4j.py
(+25 files in other folders)
